--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@tanstack/react-query": "^4.23.0",
     "daisyui": "^2.49.0",
-    "file-saver": "^2.0.5",
+    "filereader": "^0.10.3",
     "pocketbase": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sheetjs-style": "^0.15.8"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
